samples/_failures_safe/1761077618_b97ead_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e07e3189.c: In function ‘main’:
./samples/SAFE/__tmp_e07e3189.c:149:5: error: expected declaration or statement at end of input
  149 |     while (1) {
      |     ^~~~~
./samples/SAFE/__tmp_e07e3189.c:149:5: error: expected declaration or statement at end of input
